--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <header class="header">
             <img class="my-photo" src="./assets/img/my-photo.jpeg" alt="Foto de Moisés Santos">
                 <h1>Olá,<br> eu sou o Moisés</h1>
-                    <div>
-                        <p>Estagiário</p>
-                        <p>São Paulo - BR</p>
-                        <p>11967587465</p>
-                        <p>moises475oliveira@gmail.com</p>
+                    <div class="information">
+                        <p class="job">Estagiário</p>
+                        <p class="location">São Paulo - BR</p>
+                        <p class="number">11967587465</p>
+                        <p class="mail">moises475oliveira@gmail.com</p>
                     </div>
         </header>
     </div>
