add header icon

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
                         <p class="mail">moises475oliveira@gmail.com</p>
                     </div>
         </header>
+
+        <section class="acordeon">
+            <button class="trigger">Idiomas</button>
+                <div class="content">
+                    <ul>
+                        <li>Português</li>
+                        <li>English</li>
+                    </ul>
+                </div>
+        </section>
     </div>
 </body>
 </html>
