--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/acordeon.css">
 </head>
 <body>
     <div class="main">
@@ -29,9 +30,11 @@
                         <p class="mail">moises475oliveira@gmail.com</p>
                     </div>
         </header>
-
-        <section class="acordeon">
-            <button class="trigger">Idiomas</button>
+        
+        <section class="acordeon open">
+            <button class="trigger" type="button">
+                    Idiomas
+            </button>
                 <div class="content">
                     <ul>
                         <li>Português</li>
@@ -40,5 +43,8 @@
                 </div>
         </section>
     </div>
+
+    <script src="./assets/js/acordeon.js"></script>
+
 </body>
 </html>
